[package]
name = "resolver"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log        = "0.4"

# Wire
bitflags   = { version = "1.2",  optional = true }
hex        = { version = "0.4",  optional = true }
base64     = { version = "0.10", optional = true }
punycode   = { version = "0.4",  optional = true }
chrono     = { version = "0.4",  optional = true }

# Resolver
mio        = { version = "0.6",  optional = true }
openssl    = { version = "0.10", optional = true }
native-tls = { version = "0.2",  optional = true }

[dev-dependencies]
env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }

[features]
default  = [
    "wire",
    "resolver",
]
nightly  = [ ]
vendored = [ "openssl/vendored" ]

wire     = [ "bitflags", "punycode", "base64", "hex", "chrono" ]
resolver = [ "wire", "dnssec-validator", "mio", "proto-tcp", "proto-udp", "proto-tls" ]
proto-tcp = [ ]
proto-udp = [ ]
proto-tls = [ "native-tls" ]
dnssec-validator = [ "openssl" ]
