[package]
name = "resolver"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log        = "0.4"

wire = { path = "./wire" }

# Resolver
# mio        = { version = "0.6",  optional = true }
openssl    = { version = "0.10", optional = true }
# native-tls = { version = "0.2",  optional = true }

tokio      = "0.2"
ttl_cache  = "0.5"

[dev-dependencies]
env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }

[features]
default  = [
    "tokio/tcp",
    "tokio/udp",
    "tokio/time",
]
nightly  = [ ]
vendored = [ "openssl/vendored" ]


proto-tcp = [ ]
proto-udp = [ ]
# proto-tls = [ "native-tls" ]
# proto-https = [ "openssl" ]

dnssec-validator = [ "openssl" ]

# [[example]]
# name = 
# required-features = ["postgres", "tools"]