[package]
name = "resolver"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log        = "0.4"
env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }
rand       = "0.7"
tokio      = "0.2"
native-tls = "0.2"
tokio-tls  = "0.3"

h2    = "0.2"
http  = "0.2"
bytes = "0.5"
clap  = "2.33"
wire  = { path = "./wire" }
base64 = "0.11"

# Resolver
# openssl    = { version = "0.10", optional = false }

[dev-dependencies]


[features]
default  = [
    "tokio/tcp",
    "tokio/udp",
    "tokio/time",
    "tokio/full",
]

nightly  = [ "clap/nightly", ]
# vendored = [ "openssl/vendored" ]