[package]
name = "wire"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log        = "0.4"
env_logger = "0.7"

# Wire
bitflags   = "1.2"
base64     = "0.10"
punycode   = "0.4"
chrono     = "0.4"

[dependencies.tokio]
version  = "0.2"
features = [
    "full"
]



[features]
default  = [ ]
nightly  = [ ]