[package]
name = "wire"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log        = "0.4"
bitflags   = "1.2"
base64     = "0.11"
punycode   = "0.4"
chrono     = "0.4"

[features]
default  = [ ]
nightly  = [ ]
